Object position calculated in the Rigidbody simulation is ignored by the modifiers #77685

Closed
opened 2020-06-09 15:07:13 +02:00 by Germano Cavalcante · 22 comments

Blender Version
Broken: 2.80
Worked: Partly in 2.79

Short description of error
Rigid Bodies are calculated after the modifiers. So the obmat that the modifiers use is not computed.
The simulation modifiers (such as collision, particles, cloth) are greatly affected by this behavior.
ParticleBugVid0001-0100.mp4

Exact steps for others to reproduce the error

Scene 1 - hair simulation:

Open attached file and play animation

hair_particles_on_rigid_body.blend

Scene 2 - particle simulation:

Open attached file and play animation

PraticleBugReport.blend

Scene 3 - soft body simulation:

  • Open attached file
  • Bake the soft body cache of the box.

Play animation

bouncing-box-279-backup.blend

**Blender Version** Broken: 2.80 Worked: Partly in 2.79 **Short description of error** Rigid Bodies are calculated after the modifiers. So the `obmat` that the modifiers use is not computed. The simulation modifiers (such as collision, particles, cloth) are greatly affected by this behavior. [ParticleBugVid0001-0100.mp4](https://archive.blender.org/developer/F8267586/ParticleBugVid0001-0100.mp4) **Exact steps for others to reproduce the error** **Scene 1 - hair simulation:** # Open attached file and play animation [hair_particles_on_rigid_body.blend](https://archive.blender.org/developer/F5712545/hair_particles_on_rigid_body.blend) **Scene 2 - particle simulation:** # Open attached file and play animation [PraticleBugReport.blend](https://archive.blender.org/developer/F8267593/PraticleBugReport.blend) **Scene 3 - soft body simulation:** - Open attached file - Bake the soft body cache of the box. # Play animation [bouncing-box-279-backup.blend](https://archive.blender.org/developer/F6908514/bouncing-box-279-backup.blend)
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#79348 was marked as duplicate of this issue

#79348 was marked as duplicate of this issue

#78859 was marked as duplicate of this issue

#78859 was marked as duplicate of this issue

#77963 was marked as duplicate of this issue

#77963 was marked as duplicate of this issue

#77529 was marked as duplicate of this issue

#77529 was marked as duplicate of this issue

#58044 was marked as duplicate of this issue

#58044 was marked as duplicate of this issue

#63238 was marked as duplicate of this issue

#63238 was marked as duplicate of this issue

#73000 was marked as duplicate of this issue

#73000 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @rdnmnm

Added subscriber: @rdnmnm
Author
Member

Added subscribers: @michaellee8, @Sergey, @ZedDB

Added subscribers: @michaellee8, @Sergey, @ZedDB
Author
Member
Added subscribers: @MalDuffin, @JacquesLucke, @LucaRood-3, @sangwook71, @RodDavis, @EAW, @vr_sebas, @Hookflash, @fraetz, @davis095381-2, @Eary, @EricBu, @zakleap, @jricardo_rr, @badbytes, @brecht, @SmartySmart702, @3di, @sreich, @dadou99, @grosgood, @StephenSwaney, @keinerweiss, @gase12, @gogo, @lichtwerk
Author
Member

Added subscriber: @maduranga

Added subscriber: @maduranga

Added subscriber: @bent

Added subscriber: @bent

Added subscriber: @jinoch

Added subscriber: @jinoch
Member

Added subscriber: @atek

Added subscriber: @atek

Added subscriber: @Everih

Added subscriber: @Everih
Author
Member

Added subscribers: @arthk, @ahmad-aljabali

Added subscribers: @arthk, @ahmad-aljabali

This issue was referenced by 342a6b5f93

This issue was referenced by 342a6b5f9339c31931f4d2c87d9f47b88307e8cc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-08-10 10:55:09 +02:00

This bug has been merged with https://developer.blender.org/T78859 but #78859 remains unsolved. I tested by running a source build 11th August 2020 in the morning and in the public nightly build "Blender 2.91.0 Alpha, August 10, 23:15:29- acd4687063, macOS 64 bit"

This bug has been merged with https://developer.blender.org/T78859 but #78859 remains unsolved. I tested by running a source build 11th August 2020 in the morning and in the public nightly build "Blender 2.91.0 Alpha, August 10, 23:15:29- acd46870630a, macOS 64 bit"

I try blender 2.91 alpha, August 15. this bug unsolved. win 10, 64 bit.

I try blender 2.91 alpha, August 15. this bug unsolved. win 10, 64 bit.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77685
No description provided.